# rust-rag-toolchain

./: Cargo.toml
examples/pg_vector/: main.rs
src/clients/open_ai/: open_ai_core.rs
src/retrievers/: postgres_vector_retriever.rs
src/stores/: postgres_vector_store.rs
tests/pg_vector_integration_test/: postgres_vector_retriever_integration_test.rs
